working get with parameter name
