# app/api/controllers/pet.js
@@ -1,10 +1,22 @@
 'use strict';
 
 
-module.exports = {
-    getPetByName: function(req, res) {
-	      res.json({
-	          name: req.swagger.params.name
-	      });
-    }
+module.exports = {getPetByName, put, post}
+
+
+function getPetByName(req, res, next) {
+    console.log('getPetByName');
+    res.json({
+        name: req.swagger.params.name.value,
+        photoUrls: [],
+        id: 1,
+    });
 }
+
+function post(req, res) {
+    console.log('post');
+}
+function put(req, res) {
+    console.log('put');
+}
+
